# ClutchAI

./: .gitignore  README.md  env.example  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup_conda_env.sh
ClutchAI/: __init__.py  agent.py  agent_config.yaml
ClutchAI/rag/: __init__.py  data_class.py  data_classes.py  data_pipelines.py  rag_config.yaml  vector_data.yaml  vector_manager.py  vectordata.yaml  vectorstore.py
ClutchAI/tools/: __init__.py  base.py  dynasty_ranking.py  fantasy_news.py  nba_api.py  yahoo_api.py  yahoofantasy.py
agent/: ClutchAI.py  __init__.py
agents/: __init__.py  agent.py  agent_config.yaml  logger.py
agents/multi_agent/: __init__.py  analysis_agent.py  (+7 more)
app/: streamlit_app.py
config/: agent_config.yaml  multi_agent_config.yaml  multiagent_config.yaml  rag_config.yaml  streamlit_config.yaml  tools_config.yaml  vector_config.yaml
data/: __init__.py  data_class.py  knowledge_base.yaml  vector_data.yaml
docs/: CHROMADB_SETUP.md  CONDA_PYTEST_SETUP.md  VECTORSTORE_MANAGEMENT.md  YAHOO_API_SETUP_GUIDE.md  YOUTUBE_CHANNEL_PIPELINE.md
logger/: __init__.py  logger.py
notebook/: mvp.ipynb  sandbox.ipynb
sandbox/: mvp.ipynb  sandbox.ipynb
scripts/: add_youtube_channel_podcasts.py  create_database.py  update_vector_database.py
tests/: README.md  __init__.py  conftest.py  test_config.yaml  test_dynasty_ranking.py  test_fantasy_news_integration.py  test_nba_api_integration.py  test_rag_integration.py  test_rotowire_rss_integration.py  test_user_context.py  test_vectordb_connection.py  test_yahoo_api_integration.py
(+25 files in other folders)
